src/test/resources/regressions/features/sequences/seq-literal-fail8.go
package pkg

requires 0 == n
func foo(ghost n int) {
  // error: keys must be constant
  //:: ExpectedOutput(type_error)
  ghost xs := seq[int] { n : 10 }
}
